--- a/gidrotsikly/catalog.html
+++ b/gidrotsikly/catalog.html
@@ -179,15 +179,15 @@
 				<aside class="catalog__inner-aside aside-filter">
 					<div class="tabs-wrapper">
 						<div class="tabs aside-filter__tabs">
-							<a class="tab aside-filter__tab tab--active" href="#">
+							<a class="tab aside-filter__tab tab--active" href="#filter-1">
 								<span>Параметры</span>
 							</a>
-							<a class="tab aside-filter__tab" href="#">
+							<a class="tab aside-filter__tab" href="#filter-2">
 								<span>по марке</span>
 							</a>
 						</div>
 						<div class="tabs-container">
-							<div class="tabs-content aside-filter__tabs-content tabs-content--active">
+							<div id="filter-1" class="tabs-content aside-filter__tabs-content tabs-content--active">
 							<form class="aside-filter__form" action="">
 								<ul class="aside-filter__list">
 									<li class="aside-filter__item-drop">
@@ -407,7 +407,7 @@
 								</ul>
 							</form>
 							</div>
-							<div class="tabs-content aside-filter__tabs-content">
+							<div id="filter-2" class="tabs-content aside-filter__tabs-content">
 								content-2	
 							</div>
 						</div>
