--- a/gidrotsikly/product-page.html
+++ b/gidrotsikly/product-page.html
@@ -154,25 +154,27 @@
 					</h1>
 					<p class="product-card__code">Код товара: 	366666-2 </p>
 					<div class="product-card__buttons">
-						<button class="product-card__icon-favorite">
+						<a class="product-card__icon-favorite" href="#">
 							<img src="images/heart.svg" alt="">
-						</button>
-						<button class="product-card__ican-comparsion">
+						</a>
+						<a class="product-card__ican-comparsion" href="#">
 							<img src="images/comparsion.svg" alt="">
-						</button>
-						<div class="rate"></div>
+						</a>
+						<a class="rate" href="#">
+							<div class="rate-yo" data-rateyo-rating="4" ></div>
+						</a>
 					</div>
 					<div class="tabs-wrapper product-card__tabs">
 						<div class="tabs">
-							<a class="tab product-card__tab tab--active" href="#">
+							<a class="tab product-card__tab tab--active" href="#product-1">
 								Характеристики	
 							</a>
-							<a class="tab product-card__tab" href="#">
+							<a class="tab product-card__tab" href="#product-2">
 								Наличие в магазине	
 							</a>
 						</div>
 						<div class="tabs-container">
-							<div class="tabs-content product-card__tab-content tabs-content--active">
+							<div id="product-1" class="tabs-content product-card__tab-content tabs-content--active">
 								<ul class="product-card__list">
 									<li class="product-card__item">
 										<div class="product-card__item-left">
@@ -216,9 +218,11 @@
 									</li>
 								</ul>
 								<a class="product-card__more" href="#">Показать еще</a>
-								<button class="product-card__btn" >купить</button>
+								<div class="product-card__btn">
+									<button>купить</button>
+								</div>
 							</div>
-							<div class="tabs-content product-card__tab-content">
+							<div id="product-2" class="tabs-content product-card__tab-content">
 								content-2	
 							</div>
 						</div>
@@ -227,7 +231,134 @@
 			</div>
 		</div>
 	</section>
-
+	
+	<section class="card__tabs">
+		<div class="container">
+			<div class="tabs-wrapper">
+				<div class="tabs card__tab-box">
+					<a class="tab card__tab" href="#product-card__tabs-1">
+						О товаре	
+					</a>
+					<a class="tab card__tab" href="#product-card__tabs-2">
+						Характеристики
+					</a>
+					<a class="tab card__tab" href="#product-card__tabs-3">
+						Отзывы
+					</a>
+					<a class="tab card__tab tab--active" href="#product-card__tabs-4">
+						Самовывоз
+					</a>
+					<a class="tab card__tab" href="#product-card__tabs-5">
+						Доставка
+					</a>
+					<a class="tab card__tab" href="#product-card__tabs-6">
+						Cервис
+					</a>
+					<a class="tab card__tab" href="#product-card__tabs-7">
+						Гарантия
+					</a>
+				</div>
+				<div class="tabs-container">
+					<div id="product-card__tabs-1" class="card__tab-content tabs-content">
+						content	
+					</div>
+					<div id="product-card__tabs-2" class="card__tab-content tabs-content">
+						content	
+					</div>
+					<div id="product-card__tabs-3" class="card__tab-content tabs-content">
+						content	
+					</div>
+					<div id="product-card__tabs-4" class="card__tab-content tabs-content tabs-content--active">
+						<form>
+							<div class="card__top-line">
+								<label class="card__label-search">
+										Магазин
+									<input class="card__input-search" type="text">
+								</label>
+								<label class="card__label-pickup">
+									<input class="filter-style" type="radio" name="pickup">
+										Забрать сегодня
+								</label>
+								<label class="card__label-pickup">
+									<input class="filter-style" type="radio" name="pickup" checked>
+										Забрать в течение недели
+								</label>
+							</div>
+							<ul class="card__list">
+								<li class="card__list-item card__list-itemtitle">
+									<div class="card__list-address">Адрес</div>
+									<div class="card__list-workhours">Режим работы</div>
+									<div class="card__list-avialable">Доступно</div>
+									<div class="card__list-num">Количество</div>
+									<div class="card__list-btn"></div>
+								</li>
+								<li class="card__list-item">
+									<div class="card__list-address">Москва, ул. Науки 25</div>
+									<div class="card__list-workhours">
+										<span>пн-сб: 08:00-19:00</span>
+										<span>вс: 09:00-17:00</span>
+									</div>
+									<div class="card__list-avialable">В наличии</div>
+									<div class="card__list-num">1</div>
+									<div class="card__list-btn">
+										<button type="submit">КУПИТЬ</button>
+									</div>
+								</li>
+								<li class="card__list-item">
+									<div class="card__list-address">Москва, ул.  Южная 134</div>
+									<div class="card__list-workhours">
+										<span>пн-сб: 08:00-19:00</span>
+										<span>вс: 09:00-17:00</span>
+									</div>
+									<div class="card__list-avialable">В наличии</div>
+									<div class="card__list-num">2</div>
+									<div class="card__list-btn">
+										<button type="submit">КУПИТЬ</button>
+									</div>
+								</li>
+								<li class="card__list-item">
+									<div class="card__list-address">
+										Санкт-Петербург, <br>
+										ул. Красная 19
+									</div>
+									<div class="card__list-workhours">
+										<span>пн-сб: 08:00-19:00</span>
+										<span>вс: 09:00-17:00</span>
+									</div>
+									<div class="card__list-avialable">Нет в наличии</div>
+									<div class="card__list-num">0</div>
+									<div class="card__list-btn">
+										<button type="submit">КУПИТЬ</button>
+									</div>
+								</li>
+								<li class="card__list-item">
+									<div class="card__list-address">Киев, ул Шевченко 167</div>
+									<div class="card__list-workhours">
+										<span>пн-сб: 08:00-19:00</span>
+										<span>вс: 09:00-17:00</span>
+									</div>
+									<div class="card__list-avialable">Нет в наличии</div>
+									<div class="card__list-num">0</div>
+									<div class="card__list-btn">
+										<button type="submit">КУПИТЬ</button>
+									</div>
+								</li>
+							</ul>
+						</form>
+					</div>
+					<div id="product-card__tabs-5" class="card__tab-content tabs-content">
+						content	
+					</div>
+					<div id="product-card__tabs-6" class="card__tab-content tabs-content">
+						content	
+					</div>
+					<div id="product-card__tabs-7" class="card__tab-content tabs-content">
+						content	
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
@@ -237,7 +368,7 @@
 				<div class="footer__top-inner">
 					<div class="footer__top-item footer__top-newslatter">
 						<h6 class="footer__top-title">
-							Подпишитесь на нашу рассылку 
+							подпишитесь на нашу рассылку 
 							и узнавайте о акциях быстрее
 						</h6>
 						<form class="footer-form" action="">
