--- a/gidrotsikly/index.html
+++ b/gidrotsikly/index.html
@@ -1186,8 +1186,8 @@
 							<button class="footer-form__btn" type="submit">Отправить</button>
 						</form>
 					</div>
-					<div class="footer__top-item">
-						<h6 class="footer__top-title">
+					<div class="footer__top-item footer__top-itemdrop">
+						<h6 class="footer__top-title footer__topdrop">
 						Информация
 						</h6>
 						<ul class="footer-list">
@@ -1198,7 +1198,7 @@
 						</ul>
 					</div>
 					<div class="footer__top-item">
-						<h6 class="footer__top-title">
+						<h6 class="footer__top-title footer__topdrop">
 							Интернет-магазин
 						</h6>
 						<ul class="footer-list">
